generator/service.yml
apiVersion: v1
kind: Service
metadata:
  name: MYAPP
  namespace: default
spec:
  selector:
    app: MYAPP
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: MYAPP
    protocol: TCP
    port: 8000
    targetPort: 8000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 8000
